@@ -116,6 +116,16 @@ DEFINE POP16 090283
 DEFINE POPU16 090284
 DEFINE POP32 090285
 DEFINE POPU32 090286
+DEFINE CMPSKIP.G 090300
+DEFINE CMPSKIP.GE 090301
+DEFINE CMPSKIP.E 090302
+DEFINE CMPSKIP.NE 090303
+DEFINE CMPSKIP.LE 090304
+DEFINE CMPSKIP.L 090305
+DEFINE CMPSKIPU.G 090380
+DEFINE CMPSKIPU.GE 090381
+DEFINE CMPSKIPU.LE 090384
+DEFINE CMPSKIPU.L 090385
 
 # 1OP Group
 DEFINE READPC 0D00000
