@@ -222,20 +222,44 @@
 **** Stack group
 | Hex         | Name       | Comment                                                   |
 |-------------+------------+-----------------------------------------------------------|
-| 09 02 00 ab | PUSHR a b  | MEM[b] = a; b = b + (register size in bytes)          |
-| 09 02 01 ab | PUSH8 a b  | MEM[b] = bottom_8_bits(a); b = b + 1                  |
-| 09 02 02 ab | PUSH16 a b | MEM[b] = bottome_16_bits(a); b = b + 2                |
-| 09 02 03 ab | PUSH32 a b | MEM[b] = bottome_32_bits(a); b = b + 4                |
+| 09 02 00 ab | PUSHR a b  | MEM[b] = a; b = b + (register size in bytes)              |
+| 09 02 01 ab | PUSH8 a b  | MEM[b] = bottom_8_bits(a); b = b + 1                      |
+| 09 02 02 ab | PUSH16 a b | MEM[b] = bottome_16_bits(a); b = b + 2                    |
+| 09 02 03 ab | PUSH32 a b | MEM[b] = bottome_32_bits(a); b = b + 4                    |
 | 09 02 04 xx | Reserved   |                                                           |
 | ...         | Reserved   |                                                           |
 | 09 02 7F xx | Reserved   |                                                           |
 | 09 02 80 ab | POPR a b   | a = MEM[b]; MEM[b] = 0;  b = b - (register size in bytes) |
-| 09 02 81 ab | POP8 a b   | a = MEM[b] (signed); MEM[b] = 0;  b = b - 1             |
-| 09 02 82 ab | POPU8 a b  | a = MEM[b] (unsigned); MEM[b] = 0;  b = b - 1           |
-| 09 02 83 ab | POP16 a b  | a = MEM[b] (signed); MEM[b] = 0;  b = b - 2             |
-| 09 02 84 ab | POPU16 a b | a = MEM[b] (unsigned); MEM[b] = 0;  b = b - 2           |
-| 09 02 85 ab | POP32 a b  | a = MEM[b] (signed); MEM[b] = 0;  b = b - 4             |
-| 09 02 86 ab | POPU32 a b | a = MEM[b] (signed); MEM[b] = 0;  b = b - 4             |
+| 09 02 81 ab | POP8 a b   | a = MEM[b] (signed); MEM[b] = 0;  b = b - 1               |
+| 09 02 82 ab | POPU8 a b  | a = MEM[b] (unsigned); MEM[b] = 0;  b = b - 1             |
+| 09 02 83 ab | POP16 a b  | a = MEM[b] (signed); MEM[b] = 0;  b = b - 2               |
+| 09 02 84 ab | POPU16 a b | a = MEM[b] (unsigned); MEM[b] = 0;  b = b - 2             |
+| 09 02 85 ab | POP32 a b  | a = MEM[b] (signed); MEM[b] = 0;  b = b - 4               |
+| 09 02 86 ab | POPU32 a b | a = MEM[b] (signed); MEM[b] = 0;  b = b - 4               |
+| ...         | Reserved   |                                                           |
+| 09 02 FF xx | Reserved   |                                                           |
+
+**** CMPSKIP group
+| Hex         | Name            | Comment                        |
+|-------------+-----------------+--------------------------------|
+| 09 03 00 ab | CMPSKIP.G a b   | a > b ? Skip Next instruction  |
+| 09 03 01 ab | CMPSKIP.GE a b  | a >= b ? Skip Next instruction |
+| 09 03 02 ab | CMPSKIP.E a b   | a == b ? Skip Next instruction |
+| 09 03 03 ab | CMPSKIP.NE a b  | a != b ? Skip Next instruction |
+| 09 03 04 ab | CMPSKIP.LE a b  | a <= b ? Skip Next instruction |
+| 09 03 05 ab | CMPSKIP.L a b   | a < b ? Skip Next instruction  |
+| 09 03 06 xx | Reserved        |                                |
+| ...         | Reserved        |                                |
+| 09 03 7F ab | Reserved        |                                |
+| 09 03 80 ab | CMPSKIPU.G a b  | a > b ? Skip Next instruction  |
+| 09 03 81 ab | CMPSKIPU.GE a b | a >= b ? Skip Next instruction |
+| 09 03 82 ab | Reserved        |                                |
+| 09 03 83 ab | Reserved        |                                |
+| 09 03 84 ab | CMPSKIPU.LE a b | a <= b ? Skip Next instruction |
+| 09 03 85 ab | CMPSKIPU.L a b  | a < b ? Skip Next instruction  |
+| 09 03 86 xx | Reserved        |                                |
+| ...         | Reserved        |                                |
+| 09 03 FF ab | Reserved        |                                |
 
 **** Reserved Block 1
 | Hex         | Name     |
