@@ -221,6 +221,17 @@ void NANDI(struct lilith* vm, struct Instruction* c);
 void NORI(struct lilith* vm, struct Instruction* c);
 void XNORI(struct lilith* vm, struct Instruction* c);
 void NOT(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_G(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_GE(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_E(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_NE(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_LE(struct lilith* vm, struct Instruction* c);
+void CMPSKIP_L(struct lilith* vm, struct Instruction* c);
+void CMPSKIPU_G(struct lilith* vm, struct Instruction* c);
+void CMPSKIPU_GE(struct lilith* vm, struct Instruction* c);
+void CMPSKIPU_LE(struct lilith* vm, struct Instruction* c);
+void CMPSKIPU_L(struct lilith* vm, struct Instruction* c);
+
 
 /* Prototypes for functions in vm_decode.c*/
 struct lilith* create_vm(size_t size);
