@@ -1958,3 +1958,107 @@ void NOT(struct lilith* vm, struct Instruction* c)
 {
 	vm->reg[c->reg0] = ~(vm->reg[c->reg1]);
 }
+
+void CMPSKIP_G(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 > tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIP_GE(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 >= tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIP_E(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 == tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIP_NE(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 != tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIP_LE(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 <= tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIP_L(struct lilith* vm, struct Instruction* c)
+{
+	int32_t tmp1, tmp2;
+	tmp1 = (int32_t)(vm->reg[c->reg0]);
+	tmp2 = (int32_t)(vm->reg[c->reg1]);
+
+	if(tmp1 < tmp2)
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIPU_G(struct lilith* vm, struct Instruction* c)
+{
+	if((vm->reg[c->reg0]) > vm->reg[c->reg1])
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIPU_GE(struct lilith* vm, struct Instruction* c)
+{
+	if((vm->reg[c->reg0]) >= vm->reg[c->reg1])
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIPU_LE(struct lilith* vm, struct Instruction* c)
+{
+	if((vm->reg[c->reg0]) <= vm->reg[c->reg1])
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
+
+void CMPSKIPU_L(struct lilith* vm, struct Instruction* c)
+{
+	if((vm->reg[c->reg0]) < vm->reg[c->reg1])
+	{
+		vm->ip = vm->ip + 4;
+	}
+}
